[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.4"
salvo = { version = "0.37", features = ["sse"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = { version = "0.3", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
parking_lot = "0.12"
